--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,4 +7,5 @@ edition = "2021"
 
 [dependencies]
 axum = "0.6.10"
+serde = { version = "1.0.154", features = ["derive"] }
 tokio = { version = "1.26.0", features = ["macros", "rt-multi-thread"] }
