--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ serde = { version = "1.0.154", features = ["derive"] }
 tokio = { version = "1.26.0", features = ["macros", "rt-multi-thread"] }
 tower-http = { version = "0.4.0", features = ["cors"] }
 validator = { version = "0.16.0", features = ["derive"] }
+serde_with = "3.3.0"
 
 [dev-dependencies]
 httpc-test = "0.1.1"
