--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ tokio = { version = "1.26.0", features = ["macros", "rt-multi-thread"] }
 tower-http = { version = "0.4.0", features = ["cors"] }
 validator = { version = "0.16.0", features = ["derive"] }
 serde_with = "3.3.0"
+chrono = "0.4.26"
 
 [dev-dependencies]
 httpc-test = "0.1.1"
